--- a/index.html
+++ b/index.html
@@ -2,21 +2,107 @@
 <html>
 	<head>
         <style>
-        td {width:300px; line-height:30px;text-align:center}
+        .tablex {border-collapse: collapse;}
+        .tablex tr {}
+        .tablex tr td {text-align:center; line-height:30px; width:300px;}
+        .tablex tr td:hover { background-color:grey;}
         </style>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
     </head>
-    <body>
-    <h1>** lookup</h1>
-    Look up with the keyword: <input type="text" id="lookup"></input>
-    <button id="button" onclick="lookUp()">LOOKUP</button></p>
-    Listed collocations: <font id="count" color="red"></font>
-    <table border="1" cellspacing="0" cellpadding="20" align="center" id="result"></table>
-    <br><br>
-    <h1>** collocation</h1>
-    <table border="1" cellspacing="0" cellpadding="20" align="center" id="output"></table>
+	<body class="is-preload">
+	<div id="wrapper">
+    <div id="TopAnchor"></div>
+
+	<!-- -->
+	<!-- Main-->
+	<!-- -->
+	<div id="main">
+	<div class="inner">
+	<header id="header">
+        <span class="logo"><strong>CHOSETSU -- SINCE 2023 ALWAYS MAKING PROGRESS</strong></span>
+		<ul class="icons">
+		<li><a href="https://github.com/chosetsu" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+		</ul>
+	</header><br>
+
+
+
+    <h1>>> Kotoba</h1>
+    <p>Kotoba stored in the database: <font id="count" color="red"></font></p>
+    <b>Class:</b><br>
+    <p style="line-height:50px">
+    <button id="button" onclick="ShowLabel(list,'0')">ALL</button>
+    <button id="button" onclick="ShowLabel(list_1,'1')">1</button>
+    <button id="button" onclick="ShowLabel(list_2,'11')">11</button>
+    <button id="button" onclick="ShowLabel(list_3,'12')">12</button>
+    <button id="button" onclick="ShowLabel(list_4,'2')">2</button>
+    <button id="button" onclick="ShowLabel(list_5,'21')">21</button>
+    <button id="button" onclick="ShowLabel(list_6,'22')">22</button>
+    <button id="button" onclick="ShowLabel(list_7,'3')">3</button>
+    <button id="button" onclick="ShowLabel(list_8,'4')">4</button>
+    <button id="button" onclick="ShowLabel(list_9,'5')">5</button>
+    <button id="button" onclick="ShowLabel(list_10,'6')">6</button>
+    <button id="button" onclick="ShowLabel(list_11,'7')">7</button></p>
+
+    <b>Page:</b><br>
+    <p align="center"><b><font color="brown"><i id="number"></i> kotoba for each page</font></b></p>
+    <p id="index_button" style="line-height:50px"></p>
+
+    <b>Content:</b><br>
+    <table class="tablex" border="1" cellspacing="0" cellpadding="20" align="center" id="outlet_table"></table>
+
+    <footer id="footer">
+        <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=2)" width="100%" color=#9fa3a6 SIZE=10/>
+        <p><a class="icon solid fa-angle-double-up" href="#TopAnchor">&nbsp;&nbsp;BACK TO TOP</a></p>
+    </footer>
+	</div>
+    </div>
+
+	<!-- -->
+	<!-- Sidebar-->
+	<!-- -->
+    <div id="sidebar">
+	<div class="inner">
+
+    <section>
+        <b>Look up the kotoba with the ID or keywords:</b><br><br>
+        <input type="text" id="lookup" style="width:100%"></input><br>
+        <button id="button" onclick="LookUp(list)" style="float: left;">LOOKUP</button>
+        <button id="button" onclick="Clear()" style="float: right;">CLEAR</button><br><br><br>
+        <i id="result_ring">>> Waiting...</i><br>
+        <table class="tablex" border="1" cellspacing="0" cellpadding="20" align="center" id="result"></table>
+    </section>
+
+
+
+    <section>
+        <p><a class="icon solid fa-angle-double-up" href="#TopAnchor">&nbsp;&nbsp;BACK TO TOP</a></p>
+    </section>
+
+    <section>
+        <b>Write down the bugs below:</b><br><br>
+        <textarea style="width:30%"></textarea>
+        <script src="assets/autosize.js"></script>
+        <script>autosize(document.querySelectorAll('textarea'))</script>
+    </section>
+
+	</div>
+    </div>
+	</div>
     </body>
 </html>
+<script src="assets/js/kotoba/table.js"></script>
+<script src="assets/js/kotoba/lookup.js"></script>
 <script src="list.js" charset="utf-8"></script>
-<script src="assets/lookup.js"></script>
-<script src="assets/output.js"></script>
+<script src="assets/js/kotoba/main.js"></script>
+<script src="assets/js/kotoba/sublist.js"></script>
+<script src="assets/js/kotoba/index.js"></script>
+<script src="assets/js/kotoba/label.js"></script>
 
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
